Bug 671302 - Avoid passing large offsets into pixman when drawing repeated background images. r=roc